[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/ButtonPlate.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.454902, 0.454902, 0.454902, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.84072, 0.125451, 1 )

[node name="ButtonPlate" type="Spatial"]
script = ExtResource( 1 )

[node name="Mesh" type="MeshInstance" parent="."]
transform = Transform( 0.868298, 0, 0, 0, 0.0634868, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="PressArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="PressArea"]
shape = SubResource( 3 )

[node name="EnterSound" type="AudioStreamPlayer" parent="."]

[node name="LeaveSound" type="AudioStreamPlayer" parent="."]

[connection signal="area_entered" from="PressArea" to="." method="_on_PressArea_area_entered"]
[connection signal="area_exited" from="PressArea" to="." method="_on_PressArea_area_exited"]
[connection signal="body_entered" from="PressArea" to="." method="_on_PressArea_body_entered"]
[connection signal="body_exited" from="PressArea" to="." method="_on_PressArea_body_exited"]
